# configurables

./: .gitignore  .gitmessage  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: docs.yml  python-package.yml  release.yml
configurables/: __init__.py  configurable.py  core.py  emission.py  parse.py  resolution.py  typing.py
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  make.bat  readme.rst  readme_content.rst  usage.rst
examples/: typing_demo.py
src/configurables/: __init__.py  _version.py  configurable.py  core.py  emission.py  parse.py
tests/: __init__.py  conftest.py  strategies.py  test_building_configuration.py  test_config_emission.py  test_configurables.py  test_errors.py  test_examples.py  test_resolution_orderings.py  test_typing.py
