[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "configurables"
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest==6.2.4",
    "black==24.4.2",
    "hypothesis==6.100.4",
    "mypy==1.10.0",
    "pytest-cov==5.0.0"
]

[tool.setuptools.dynamic]
version = {attr = "configurables.__version__"}

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.mypy]
exclude = "docs"
