[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "configurables"
dynamic = ["version"]
description = "A package which allows seamless passing of configuration file variables to functions."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["configurables", "configuration", "development", "qol"]

authors = [
    {name = "William Fong", email = "willfong@mit.edu"}
]
maintainers = [
    {name = "William Fong", email = "willfong@mit.edu"}
]

classifiers = [
    "Development Status :: 5 Production",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Configuration",
    "License :: OSI Approvied :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://tessgit.mit.edu/wcfong/configurables"

[project.optional-dependencies]
dev = [
    "pytest==6.2.4",
    "black==24.4.2",
    "hypothesis==6.100.4",
    "mypy==1.10.0",
    "pytest-cov==5.0.0"
]

[tool.setuptools.dynamic]
version = {attr = "configurables.__version__"}

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.mypy]
exclude = "docs"
