[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "configurables"
version = "1.1.0"
dynamic = []
description = "A package which allows seamless passing of configuration file variables to functions."
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["configurables", "configuration", "development", "qol"]

authors = [
    {name = "William Fong", email = "willfong@mit.edu"}
]
maintainers = [
    {name = "William Fong", email = "willfong@mit.edu"}
]

classifiers = [
    "Development Status :: 5 Production",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Configuration",
    "License :: OSI Approvied :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://tessgit.mit.edu/wcfong/configurables"

[project.optional-dependencies]
dev = [
    "pytest==6.2.4",
    "black==24.4.2",
    "hypothesis==6.100.4",
    "mypy==1.10.0",
    "pytest-cov==5.0.0"
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1.29",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-copybutton>=0.5"
]


[tool.black]
line-length = 79

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.mypy]
exclude = "docs"

[tool.semantic_release]
branch = "master"
version_variable = [
    "src/configurables/_version.py:__version__"
]
version_toml = [
    "pyproject.toml:project.version"
]
upload_to_pypi = false
upload_to_release = true
build_command = "python -m build"
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): v{version} [skip ci]"
commit_author = "semantic-release <semantic-release@github.com>"
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
major_on_zero = false
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
